[package]
name = "venice-program-table"
version = "0.1.0"
edition = "2024"

description = "Multi-purpose file format for delivering code to VEX V5 programs"
keywords = ["robotics", "vex", "v5"]
repository = "https://github.com/venice-v5/venice-program-table"
license = "MPL-2.0"
authors = ["Faisal Malallah <faisal@fibn.cc>"]

[dependencies]
bytemuck = { version = "1.23.2", features = ["derive"] }

[features]
default = ["builder"]
builder = []
